manifests/radicale/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
  labels:
    app: radicale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      enableServiceLinks: false
      containers:
        - name: radicale
          image: "docker.io/tomsquest/docker-radicale:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5232
              protocol: TCP
          volumeMounts:
            - name: collections
              mountPath: /data
            - name: config
              mountPath: /config/config
              subPath: config
            - name: users
              mountPath: /etc/radicale/users
              subPath: users
              readOnly: true
          resources: {}
      volumes:
        - name: config
          configMap:
            name: radicale-config
        - name: users
          secret:
            secretName: radicale-users
        - name: collections
          persistentVolumeClaim:
            claimName: pvc-nfs-radicale-data
      imagePullSecrets:
        - name: github-registry-creds
