manifests/radicale/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: radicale
  labels:
    app: radicale
spec:
  selector:
    app: radicale
  type: ClusterIP
  ports:
    - name: dav
      protocol: TCP
      targetPort: 5232
      port: 5232
