manifests/radicale/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radicale
  labels:
    gateway: public
    app: radicale
spec:
  hostnames:
    - radicale.stamx.nl
  parentRefs:
    - name: public
      namespace: gateway-public
      sectionName: https
  rules:
    - backendRefs:
        - name: radicale
          port: 5232
