manifests/radicale/base/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
  labels:
    app: radicale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      enableServiceLinks: false
      containers:
        - name: radicale
          image: "docker.io/tomsquest/docker-radicale:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5232
              protocol: TCP
          volumeMounts:
            - name: collections
              mountPath: /data
            - name: config
              mountPath: /config/config
              subPath: config
            - name: users
              mountPath: /etc/radicale/users
              subPath: users
              readOnly: true
          resources: {}
      volumes:
        - name: config
          configMap:
            name: radicale-config
        - name: users
          secret:
            secretName: radicale-users
        - name: collections
          persistentVolumeClaim:
            claimName: pvc-nfs-radicale-data
      imagePullSecrets:
        - name: github-registry-creds

---
kind: Service
apiVersion: v1
metadata:
  name: radicale
  labels:
    app: radicale
spec:
  selector:
    app: radicale
  type: ClusterIP
  ports:
    - name: dav
      protocol: TCP
      targetPort: 5232
      port: 5232

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: radicale-public
  labels:
    app: radicale
spec:
  ingressClassName: nginx-public
  rules:
    - host: radicale.stamx.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radicale
                port:
                  number: 5232
  tls:
    - hosts:
        - radicale.stamx.nl
      secretName: tls-wildcard-stamx-nl
